# rmdev

./: Cargo.toml  readme-zh.md  readme.md
src/: command.rs  main.rs  scan_category.rs  signal.rs  ui.rs
src/command/: clear.rs
src/ui/: router.rs
