[package]
name = "rmdev"
version = "0.0.0"
authors = ["WumaCoder <wumacoder@gmail.com>"]
description = "This is a tool to delete the remaining dependencies and cache files in the development environment, eg: nodule_modules、target..."
edition = "2021"
keywords = ["tools", "cli"]
categories = ["development-tools", "utilities", "system-programming", "command-line-utilities", "process-management"]
homepage = "https://github.com/WumaCoder/rmdev.git"
repository = "https://github.com/WumaCoder/rmdev.git"
license = "MIT"


[[bin]]
name = "rmdev"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full", "tracing"] }
futures = "0.3.30"
anyhow = "1.0.86"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
ratatui = { version = "0.27.0", features = ["crossterm"] }
tui-input = "*"
serde_json_path = "0.6.7"
regex = "1.10.5"
walkdir = "2"
unicode-width = "*"

[dependencies.educe]
version = "*"
features = ["Default"]
default-features = false
