[package]
name = "rmdev"
version = "0.2.3"
authors = ["WumaCoder <wumacoder@gmail.com>"]
description = "This is a tool to delete the remaining dependencies and cache files in the development environment, eg: nodule_modules、target..."
edition = "2021"
keywords = ["tools", "cli"]
categories = ["development-tools", "command-line-utilities"]
homepage = "https://github.com/WumaCoder/rmdev.git"
repository = "https://github.com/WumaCoder/rmdev.git"
license = "MIT"


[[bin]]
name = "rmdev"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full", "tracing"] }
futures = "0.3.30"
anyhow = "1.0.86"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
ratatui = { version = "0.27.0", features = ["crossterm"] }
unicode-width = "0.1.13"
rayon = "1.10.0"
once_cell = "1.19.0"
dialoguer = "0.11.0"


[dependencies.educe]
version = "0.6.0"
features = ["Default"]
default-features = false
